# Forcasting-ai-training

./: README.md  Runneble.py  pyproject.toml
data/halfhourly_dataset/halfhourly_dataset/: aShortBlock_0.csv  aShortBlock_1.csv
data/test/halfhourly_dataset/: shortened_block_0.csv
data/test/tmp/: formatted_data.csv
src/LSTM_Training/: LSTM.py  __init__.py
src/initialization/: __init__.py  data.py
test/: test_init_data.py
